--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ script:
 - pwsh ./scripts/run.ps1
 deploy:
   provider: releases
+  api_key: ${GH_TOKEN}
   user: ${GITHUB_USERNAME}
   password: ${GITHUB_PASSWORD}
   file:
