--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
 - sudo apt-get install python3.6-venv
 install:
 - sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 10
-- ". ./scripts/init-env.sh"
+- "./scripts/init-env.sh"
 - init-env
 script:
 - pwsh ./scripts/run.ps1
